--- a/master peace ajloun/adminDashboard/css/style.css
+++ b/master peace ajloun/adminDashboard/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #EB1616;
+    --primary: rgb(22, 124, 22);
     --secondary: #191C24;
     --light: #6C7293;
     --dark: #000000;
