--- a/master peace ajloun/styles/contact_styles.css
+++ b/master peace ajloun/styles/contact_styles.css
@@ -351,8 +351,9 @@ section {
 .phone {
 	display: inline-block;
 	margin-right: 36px;
-	line-height: 36px;
-	font-size: 10px;
+	line-height: 50px;
+	letter-spacing: 2px;
+
 	font-weight: 600;
 	color: #FFFFFF;
 }
@@ -1364,4 +1365,26 @@ section {
 	/* center the content both horizontally and vertically */
 	width: 12vw;
 	height: 7vh;
+}
+
+
+
+#profile_icon {
+
+	display: inline-block;
+	font-size: 10px;
+	line-height: 36px;
+	font-weight: 600;
+	color: #FFFFFF;
+	text-transform: uppercase;
+}
+
+
+#profile_icon:hover {
+	color: green;
+	text-decoration: none;
+	/* -webkit-font-smoothing: antialiased; */
+	-webkit-text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
+	text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
+
 }
