--- a/master peace ajloun/styles/edit_profile.styles.css
+++ b/master peace ajloun/styles/edit_profile.styles.css
@@ -61,6 +61,15 @@ body {
     border-radius: 50%;
 }
 
+.phone {
+    display: inline-block;
+    margin-right: 36px;
+    line-height: 50px;
+    letter-spacing: 2px;
+
+    font-weight: 600;
+    color: #FFFFFF;
+}
 
 
 
@@ -382,11 +391,13 @@ body {
     width: 100%;
 }
 
-#editProfile input{
+#editProfile input {
     padding-top: 0 !important;
     margin: 0 !important;
 
-}.table-custom thead th {
+}
+
+.table-custom thead th {
     background-color: #f7f7f7;
     border-bottom: none;
     padding: 1rem;
@@ -513,4 +524,25 @@ body {
 
 .file-input label:hover {
     background-color: #eee;
+}
+
+
+#profile_icon {
+
+    display: inline-block;
+    font-size: 10px;
+    line-height: 36px;
+    font-weight: 600;
+    color: #FFFFFF;
+    text-transform: uppercase;
+}
+
+
+#profile_icon:hover {
+    color: green;
+    text-decoration: none;
+    /* -webkit-font-smoothing: antialiased; */
+    -webkit-text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
+    text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
+
 }
