--- a/master peace ajloun/styles/offers_styles.css
+++ b/master peace ajloun/styles/offers_styles.css
@@ -357,8 +357,9 @@ section {
 .phone {
 	display: inline-block;
 	margin-right: 36px;
-	line-height: 36px;
-	font-size: 10px;
+	line-height: 50px;
+	letter-spacing: 2px;
+
 	font-weight: 600;
 	color: #FFFFFF;
 }
@@ -1535,9 +1536,7 @@ section {
 	padding-left: 22px;
 }
 
-.offers_content {
-	
-}
+.offers_content {}
 
 .offers_price {
 	display: inline-block;
@@ -2083,4 +2082,25 @@ strong {
 
 .profileimga:hover {
 	color: white;
+}
+
+
+#profile_icon {
+
+	display: inline-block;
+	font-size: 10px;
+	line-height: 36px;
+	font-weight: 600;
+	color: #FFFFFF;
+	text-transform: uppercase;
+}
+
+
+#profile_icon:hover {
+	color: green;
+	text-decoration: none;
+	/* -webkit-font-smoothing: antialiased; */
+	-webkit-text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
+	text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
+
 }
