--- a/master peace ajloun/styles/main_styles.css
+++ b/master peace ajloun/styles/main_styles.css
@@ -325,7 +325,7 @@ section {
 }
 
 .header.scrolled {
-	background: rgba(0, 128, 0, 0.6);
+	background: rgba(0, 100, 0);
 }
 
 /*********************************
