--- a/master peace ajloun/styles/blog_styles.css
+++ b/master peace ajloun/styles/blog_styles.css
@@ -315,16 +315,15 @@ section {
 /*********************************
 3. Header
 *********************************/
-
 .header {
 	position: fixed;
 	width: 100%;
-	background: rgba(54, 19, 84, 0.6);
-	z-index: 12;
+	background: rgba(0, 100, 0, 0.6);
+	z-index: 999;
 }
 
 .header.scrolled {
-	background: rgba(54, 19, 84, 0.85);
+	background: rgba(0, 100, 0);
 }
 
 /*********************************
@@ -334,7 +333,7 @@ section {
 .top_bar {
 	width: 100%;
 	height: 36px;
-	background: #350a4e;
+	background: darkgreen;
 	-webkit-transition: all 400ms ease;
 	-moz-transition: all 400ms ease;
 	-ms-transition: all 400ms ease;
