--- a/master peace ajloun/styles/login_styles.css
+++ b/master peace ajloun/styles/login_styles.css
@@ -324,11 +324,11 @@ section {
     position: fixed;
     width: 100%;
     background: rgba(0, 100, 0, 0.6);
-    z-index: 12;
+    z-index: 999;
 }
 
 .header.scrolled {
-    background: rgba(0, 100, 0, 0.6);
+    background: rgba(0, 100, 0);
 }
 
 /*********************************
@@ -345,6 +345,7 @@ section {
     -o-transition: all 400ms ease;
     transition: all 400ms ease;
 }
+
 
 .header.scrolled .top_bar {
     visibility: hidden;
