--- a/master peace ajloun/styles/contact_styles.css
+++ b/master peace ajloun/styles/contact_styles.css
@@ -1388,3 +1388,21 @@ section {
 	text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
 
 }
+
+
+
+.titlepages {
+	display: grid;
+	place-items: center;
+	width: 20vw !important;
+	height: 7vh;
+}
+
+.strong {
+	z-index: 2;
+	font-family: 'Poppins'sans-serif;
+	font-size: 25px !important;
+	letter-spacing: 3px;
+	color: #FFFFFF;
+	text-shadow: 0 0 4px rgb(0, 0, 0);
+}
