--- a/master peace ajloun/styles/login_styles.css
+++ b/master peace ajloun/styles/login_styles.css
@@ -1597,7 +1597,7 @@ section {
 strong {
     z-index: 2;
     font-family: 'Poppins'sans-serif;
-    font-size: 16px;
+    font-size: 25px !important;
     letter-spacing: 3px;
     color: #FFFFFF;
     text-shadow: 0 0 4px rgb(0, 0, 0);
@@ -2449,4 +2449,25 @@ sub, sup {
     -webkit-text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
     text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
 
+}
+
+
+
+
+
+
+.titlepages {
+    display: grid;
+    place-items: center;
+    width: 20vw !important;
+    height: 7vh;
+}
+
+.strong {
+    z-index: 2;
+    font-family: 'Poppins'sans-serif;
+    font-size: 25px !important;
+    letter-spacing: 3px;
+    color: #FFFFFF;
+    text-shadow: 0 0 4px rgb(0, 0, 0);
 }
