--- a/master peace ajloun/styles/telefrik_styles.css
+++ b/master peace ajloun/styles/telefrik_styles.css
@@ -2417,10 +2417,10 @@ button {
 	height: 7vh;
 }
 
-.strong {
+strong {
 	z-index: 2;
 	font-family: 'Poppins'sans-serif;
-	font-size: 25px !important;
+	font-size: large !important;
 	letter-spacing: 3px;
 	color: #FFFFFF;
 	text-shadow: 0 0 4px rgb(0, 0, 0);
