--- a/master peace ajloun/styles/telefrik_styles.css
+++ b/master peace ajloun/styles/telefrik_styles.css
@@ -1554,7 +1554,7 @@ section {
 }
 
 .bar-button {
-	background-color: #28a745;
+	background-color: #1b6f2f;
 	/* Green background */
 	color: white;
 	border: none;
@@ -2110,7 +2110,7 @@ strong {
 }
 
 .bar-button {
-	background-color: #4CAF50;
+	background-color: #2a692c;
 	color: white;
 	border: none;
 	padding: 10px 20px;
@@ -2120,7 +2120,7 @@ strong {
 }
 
 .bar-button:hover {
-	background-color: #45a049;
+	background-color: #205323;
 }
 
 
@@ -2220,7 +2220,7 @@ sub, sup {
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 	width: 30%;
 	max-width: 90%;
-	background: rgb(1, 125, 1);
+	background: rgb(1, 90, 1);
 	background-size: 100% 300px;
 	background-position: 0% 100%;
 	transition: all 0.5 ease-in-out;
@@ -2266,7 +2266,7 @@ sub, sup {
 }
 
 #close-popup {
-	background-color: #4CAF50;
+	background-color: #0f491c;
 	color: #fff;
 	padding: 10px 20px;
 	border: none;
@@ -2276,7 +2276,7 @@ sub, sup {
 }
 
 #close-popup:hover {
-	background-color: #3e8e41;
+	background-color: #2c712f;
 }
 
 /* Animation */
@@ -2343,7 +2343,7 @@ sub, sup {
 	padding: 15px 30px;
 	margin: 10px 0;
 	border-radius: 5px;
-	background-image: linear-gradient(to right, #4CAF50, #3e8e41);
+	background-image: linear-gradient(to right, #307b32, #3e8e41);
 	color: #fff;
 	font-size: 18px;
 	text-transform: uppercase;
@@ -2358,7 +2358,6 @@ sub, sup {
 
 .choose-book:hover {
 	background-position: center;
-	letter-spacing: 3px;
 	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
