--- a/master peace ajloun/css/style.css
+++ b/master peace ajloun/css/style.css
@@ -407,7 +407,7 @@
 .service {
     position: relative;
     overflow: hidden;
-    background-image: url(../image/images\ \(97\).jpg);
+    background-image: url(../image2/test7.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -420,7 +420,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background: rgba(0, 0, 0, .7);
+    background: rgba(0, 0, 0, .5);
     z-index: 1;
 }
 
@@ -452,10 +452,7 @@
     left: 0;
     border-radius: 10px;
     background: green;
-    ;
-    ;
-    ;
-    ;
+ 
     transition: 0.5s;
     z-index: 2;
 }
@@ -521,7 +518,7 @@
     overflow: hidden;
     top: 0;
     left: 0;
-    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../image/133463_1692639245_1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../image2/test1.jpg) center center no-repeat;
     background-size: cover;
     z-index: -2;
     animation-name: attraction-image-zoom;
@@ -815,9 +812,7 @@
 .team .team-item {
     position: relative;
     background: green;
-    ;
-    ;
-    ;
+    
     border-radius: 10px;
 }
 
